# cheatsheet-maker

./: .gitignore  README.md  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: build.yml
electron/: main.ts  preload.ts  tsconfig.json
scripts/: build-electron.mjs  electron-dev.mjs
src/: App.tsx  electron.d.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.css  Editor.jsx  Editor.tsx  FilePanel.css  FilePanel.jsx  FilePanel.tsx  FormattingToolbar.tsx  ImageRenderer.tsx  LazyKatex.tsx  MermaidDiagram.tsx  Outline.tsx  Preview.css  Preview.jsx  Preview.tsx  SyncSettings.tsx  ThemeEditor.tsx  Toolbar.tsx
src/styles/: fonts.ts  themes.js  themes.ts
src/utils/: fileStorage.ts  githubSync.js  githubSync.ts  imageStorage.js  imageStorage.ts  preprocessMarkdown.ts  useLocalStorage.ts
