[package]
name = "cheatsheet-maker"
version = "0.0.0"
description = "Cheatsheet Maker desktop shell"
authors = ["Cheatsheet Maker"]
edition = "2021"

[lib]
name = "cheatsheet_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
notify = "6"
chrono = { version = "0.4", features = ["clock"] }
